--- a/app/src/main/res/layout/adapter_tags.xml
+++ b/app/src/main/res/layout/adapter_tags.xml
@@ -5,41 +5,39 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:elevation="8dp"
-    android:id="@+id/carddata"
     app:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/id"
-            android:layout_width="match_parent"
+            android:id="@+id/tag_name"
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="center_vertical|start"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textDirection="locale"
             android:textStyle="bold"
             tools:text="@tools:sample/full_names" />
 
         <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
+            android:id="@+id/tag_posts"
+            android:layout_width="0dp"
+            android:layout_weight="0.3"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="center_vertical|start"
-            android:paddingTop="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textDirection="locale"
             android:textStyle="bold"
             tools:text="@tools:sample/full_names" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
-
-
 
