--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -118,7 +118,7 @@ android:orientation="vertical"
         android:layout_marginBottom="@dimen/dimen_six_dp"
         android:gravity="center"
         android:padding="@dimen/dimen_four_dp"
-        android:text="@string/app_name"
+        android:text="@string/creation"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/black"
         android:textStyle="bold" />
